--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// https://mvnrepository.com/artifact/io.vavr/vavr
+	compile group: 'io.vavr', name: 'vavr', version: '1.0.0-alpha-3'
 }
+
