--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// https://mvnrepository.com/artifact/io.vavr/vavr
 	compile group: 'io.vavr', name: 'vavr', version: '1.0.0-alpha-3'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// https://mvnrepository.com/artifact/com.h2database/h2
+	compile group: 'com.h2database', name: 'h2', version: '1.4.199'   //or testCompile?
+	//testCompile group: 'com.h2database', name: 'h2', version: '1.4.199'
 }
 
