--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.h2database/h2
 	compile group: 'com.h2database', name: 'h2', version: '1.4.199'   //or testCompile?
 	//testCompile group: 'com.h2database', name: 'h2', version: '1.4.199'
+	compile 'io.springfox:springfox-swagger2:2.9.2'
+	compile 'io.springfox:springfox-swagger-ui:2.9.2'
 }
 
